Up to date changes. Added galleries and new images.

--- a/galleries/portraits-gallery.html
+++ b/galleries/portraits-gallery.html
@@ -93,16 +93,19 @@
 
 	/* Position the "next button" to the right */
 	.next {
-		right: 0;
-		border-radius: 3px 0 0 3px;
+	  right: 0;
+	  border-radius: 3px 0 0 3px;
 	}
 
 	/* On hover, add a black background color with a little bit see-through */
 	.prev:hover, .next:hover {
-		background-color: rgba(0,0,0,0.8);
+	  background-color: rgba(0,0,0,0.8);
 	}
 
 	img{
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
 		width:100%;
 		max-height:670px;
 	}
@@ -127,7 +130,7 @@
 
 	/* On smaller screens, decrease text size */
 	@media only screen and (max-width: 300px) {
-	  .prev, .next,.text {font-size: 11px}
+		.prev, .next,.text {font-size: 11px}
 	}
 
 </style>
@@ -152,15 +155,19 @@
 	<div class="slideshow-container">
 
 		<div class="mySlides fade">
-			<img src="https://lh3.googleusercontent.com/QmylT9JMy_yaoQrZnIsjoUn8-6vtxFBUvjRDaLkRlgEpkYW-4jgIIlqIXg2RzzGyoS9pOazeSyBae92htetFUlTtXJMiHAkshXs_ukOHAm-3WB6cwoChNcSMZR6OMubXzjgxNrbUIQHiyx5CVpsRt9_JkvZy1XFbaHuKwJ1dZRxaEwhxYgDEzXnlH88S9o9NmArX7B98lm75fDCqcaYxhVWW_lxLLfaEWQlR51HeuFkcXJE3bsknMj0n_Ei-Dewqw2ev-RuRFVWKsI6KPQZ0KKyPEU5WAfwoetg-3mqsnIwONEFfSyqeFeLgzL4csWVlR1WgV-9LKLp4M8qXlPmmOamCcZwq2WPTGOxMxoiiAfUoWvL6VOXgAvPx0QqZZLX1bc8d34-f337KRd8BwangAdoPeDUna4sdLyRhbePLAgweor_FX6C2eDebuN8drbNNEvc_a5nosaxOF8tQoErSqSKAOYTpfdLZxuQIRXMKOMWRwD8CrwT9s49eJqVx8I0yha18WD_neBQOMW3bxh30PNp4Sr_V2s9RBbMdbs-LbQpwwDyeXPRF542maLTbuKeNvUp71eJ_nbSKWIH5UesI_LhJC-jStH_tFRUdY96DNHk6L8ZwT1ijbzs_0ou7sbSGt1iQoJFyi3-eWaZhKUDYNrZHb8WG65RZcm4=w1265-h949-no" >
+			<img src="https://lh3.googleusercontent.com/tocj0kGpczadLfxQ4KbliaWQHSNfFa1fEb1v3oafkvKhIWk6v_gaAMSY3QDw_SMISNRhvOngUStc-pSRlvSXrJrTFR7tfqYPG5Bo8HglJo5j5eh9s3uP49XhFwHsg4vLnsnfNiMvWvql5vwFgmUicdaWypHwFWN_c9NkNNF74e4J0ohTeZYBI-YjyR8otPBgv_iQrOSBnp3HnK-sZNeZSTqnvhbtYD_I0h7PjNUkQjOtAtCoiXRNo-zhR2iLMh5OTMtZPbbYKsiQx5XJxpbbpBKuWhsDhMjeRgjyfX5JWGFbEkRg7FCfYOPcSMKUEJOcchdfm1rm8YWoF8WA_nJQD_29kiYhs8eJdYT_ixUsD2ZCouKC-rmmN_Vuh6tYg6yw4UgIjBs0L86msQ46L_kJIBaHn_O5LSHfGhU5JtwH3yapUa9NL6txxS4obRmioC62Nlbt270ch-EIytyKhEaInzO2D5jzTYoR_5ZrnPO6oZy1-mjP5te3kD0VBvmETah9etpS5xPg6wsaVl4IT8uxpCI5b6tgT7mgA1pF_YYkc7vQLTrgVnOS3F-eS0ARhPHqWFcG6lW7vaP8pAH1w_2EE-Gijq8zuGOm5nkA0s5AQx4WIam6-RhwR0iZr_ltLM_P43d5po-eTVckZjc-mIWQafNMgiJuB7uP=w1265-h949-no">
 		</div>
 
 		<div class="mySlides fade">
-			<img src="https://lh3.googleusercontent.com/nL2v8OTaVAQeJbbPZjdt66EKlUGZZEyHNAKFEDdUXQkJoHT3MdoRWOJGVg-8CoyXipNrct6NwoPM6bhtvGZ9z-8rthBIn_-D15d3AkIZrTQq6ABEs3aV0exnQmX0mxCyftQ5UC-4CbWMFbKNpAnLeYlX8ThRqbfmhNP3Ay_Oklv0BLHT4p57FFVO6jwuVniHeZxwQNW1v76--EUvScjE9roHceNeXFA4ajEf3kWWT2aOYgmbeIBEgqgbqvqMBbr4laRmnrO23yNKKVacLqwf3aBYutUoYnyIwX_Mr4mY-30R928xA8yCk2r8QCG8PSAXygGsnYKEXnB0zL3zCEckjuyoCXdiBfxy_G4LAm5LF_zDYD29lMjMlVAAMVF3ZKlcoe5opwPmSIwVDHy4vCysQJW6gEynk-iLqNIVAXpbzMM9cXyOp4_btdfrVoICiijM8GL2TOuzvZKrnoQFs127vLhWq1m3RRk45FACB6ojgvqadpsI0FS5Pf6q_k4jzKfCxXwsCWxDJxQq_cbp_7_sd6roS1LFycVLup8kj03u5-PMH9I2z-vsPl5Oicdo5-hoG-FnQUwk6MpSRy7iA8ThxBDOA5pmnm6ph7EeconMrqvo-7iHItewadiXoHmcCz7Bw37vdXN6kYQ6bEtSxbaZP0ARt4_VDxbXycI=w1433-h949-no" >
+			<img src="https://lh3.googleusercontent.com/6S8v4VciZg-wCe4uulewdeUl6HNcEiUC5VD3vLd5SRdY5H_0PqAiZDEr2F2zY1HFkN9kSPmTE8sh8iFPyeWNAQyl2RBRycOy4wOM48jPvzzxso_BFDwzhAfFASmuM3ZYYoo3Z3KA3NBRF3j9cYoBeUpBct1PhwuQnAh0pDh2p2jwMgqpMgqUXw3quFohAyx72QyMo-hrH8T-WmIsDWu6G7R5eQj_7qNWxudcOwS9GEUXEtVGiNj7dMEJ--6MUxiAsdn_GOWr7n2A_-7iLbc1Ho4WAvnHExuHm8LTOkt0QYPa4NF_beA0HVorTCXWgEkYpaPhKwaV19cU9I5N5u_wWMX_bn2Zcj0GBD3NnGejkaWGlSD01-HD9OtY_nbGJG20xbvzBTH0q_Nx_S1JzhQU2GtEdiUc4E33FfTm78A0aYUIM3qJiLe9ijZ9FkPt75MqtNqvk4VNh2gUu2dr8dEHLXdyR3flGVRxpHYhkXZxcllSxmtM4o69NnTT0ObGGF1GeDaAcl1KNFF2rTc8RV4ic7U8Hf8WuEfPnUIOjNCH-JEuE5oU8ZOuaEnBpWDWraZI6zS074rr48kLXpQOp8oe5sJnV-1SqZCZISAJbNWvMiXXDwghd_miqUFxqpfVVQCSZaI_z8J3jZ5eYvfvMtctA5PySTsxxXDM=w1434-h949-no" >
 		</div>
 
 		<div class="mySlides fade">
-			<img src="https://lh3.googleusercontent.com/LpP4o4cNuMI7ma23_f7Rveu5CTKcAPId0_v1iU02pOpU-6ewnr6XCa1DwPW6dEvtJrvoYVNi6cwynEX_eGooig-eeYlJZPu7aS3jo2a0bE9t_hNCd7yjtU_kiSazN0yxtY1x6ILUtLKthLMsHM53Li2DpimAc--LATwahB2UZzQIrD8msgItJvCbfxbFlIQFi139mk-bVpZkYkHXZ1le1dRqI_E2y89QuzxP_OgcUR7dEGSFnb9GM96aLwcrYtYEnP_QRN44jH-bJc61la-MyJP4Zp4ZHhxWKVe5YhqA72wc33cZG6XpKotYEPXHJs--GbFs77T8q9AnHqig80uJ1IXyvzAZrJA3bHUZ-ivGhqAXGC6efAfy_-dfS223BCyrtMkP5f0QyscU-GGgr9yKalwx0Ezyrnw0Q8ODzKuwm9-P3hqDxsfK3mxutRskEwmpOu7V7nyjvAjan0arcYyD-p08g70sgbuHzqkiypOEVd6eXAzEDmsXmFrbc8e1DBo8TV7LQs8KgZSqs2aPej_WS8Yi9d81pFd5ABqBd8o1WowQm5srv9ZT8BM7y061nmOVGU6s4ybZ2SuKgbwSNppbZKd7rG2IMBagLWTLxQaFoUT8wiIx5PKvf3dASJmXLQw-KZVFFURx22c8yFXLzbh4UwvWL-366ib0paY=w1639-h949-no">
+			<img src="https://lh3.googleusercontent.com/Q0nzSCux_4H5dztB7JAAJwmitytDQXYCvSLb8xr8xYyvA6kAcxshPx7Uv6CTtUznGJkJ51er_FdyrKdB_HBOvqymN87v21tx-qYjFyNBuMltIqXQdiFJddOFLveoXu3WIkz9MuBKhg9NLzcoKXegvmo6cJ9hDkvWZ5YQGh0zHC_sbHvDhZhq-1QOEVdB_9ZpWTPFSiCNPcFPTcvkvp-hH3Lh7V0ZFk9DR82e7HCyJhAcQOGF3dStDJNP0J1NRbrmlumHycTo5wiKch4VsmsmHBlySRlaRhkp8POhXbflZebcRYJYJQJgMFoS8n3qIn8F4CUbrU4saSV0Ssny78AjJwX4yFrLPg2XTeZSzoorYzvHn31yMGaDpL5ofSxVkT-DyaI4oOHDD0y92ewSY-vhOzjGA6Qsw5gwj2jRdJQ5JNyk3tsp424euF_qMa7Ob_3ahDTH4gOYvMyFzFsPuI8W22GfVGf19vFlPteVH-v2HpW6ls8Fw0e-NvoaASi6H9WbQH543rEE716ifCWulXllb6bpWcnvAG09As0_YlgaoVxoFQGFAZHdJzeuQVQXuUpMTn_WtBrYVxHxU4sFIgqTTaJFJwrndmLswPLHbX4W5gdVdNtSmjTeRa8xU8kV1WVXG0eKK9uj-b9zyQ2PEjHPS0Y27Dz3I1OF=w1434-h949-no" >
+		</div>
+
+		<div class="mySlides fade">
+			<img src="https://lh3.googleusercontent.com/yYKFNxsL2w63sqh2NXbVYRSW5p5ipCcS04mDFkyjkkzwRR23_4ct1YYcWK6Ie0883HCM7vaJCp6N5BY-ScHoKce2xQJQqRUi7FsGFGl957O_vj9CA3VMDtzRzZh7xICX-IQUwrvsIUtJtuHKZkEJBD-PVyVgMRXR-Mtcznk8TBslpsWOO7y2vQwDI1rghokSTCxEJ-UrGJg85z5-2EJ0mNGqNQxFjfltEfWIrkQ8O2WtGj4PFst3J4NWby9VrvOd7wSfqggudMGpBQ9UVmbI5yz9neg1LCjQP3Mll363vC-d740A5H0mMwgjWLtPEHq49wYMfPjfHIeWY8j3h1KDCt__7xANJwdrDjmV8M16cWjfyIbbRyEMM749ZZ2ecsuVstRwRucN1Hj4ryMd2jyzuWJobS8Na2E5yeRmEdwgNNtZ9RRaNgCu9txZBLD654VgqfXMD7UTU1tNGe7iu8E9teKZt5Z3SPd6GgPa1UTXrFlo-xRR7QQOtRTcxTlys563vAP6xq4kSp-fxzrZyAyy_h52fkNnbIef6AjAN6TfDCp3m3wUYP7fZXiX0XcRUXXwbmHHKGPmtSun6X-P2peSJHoKI1d-T2KfWAJE4r-AzeUuuflepITqTaHSmFTjqW5IZMw-IrBVPCj8oFgQ73Z_FRx7X_mE3suP=w1265-h949-no">
 		</div>
 
 
@@ -174,6 +181,7 @@
 		<span class="dot" onclick="currentSlide(1)"></span> 
 		<span class="dot" onclick="currentSlide(2)"></span> 
 		<span class="dot" onclick="currentSlide(3)"></span> 
+		<span class="dot" onclick="currentSlide(4)"></span> 
 	</div>
 
 	<script>
@@ -214,7 +222,7 @@
 		  dots[slideIndex-1].className += " active";
 		}
 
-	</script>
+</script>
 
 </body>
 </html>
