--- a/galleries/proposals-gallery.html
+++ b/galleries/proposals-gallery.html
@@ -103,6 +103,9 @@
 	}
 
 	img{
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
 		width:100%;
 		max-height:670px;
 	}
@@ -127,7 +130,7 @@
 
 	/* On smaller screens, decrease text size */
 	@media only screen and (max-width: 300px) {
-	  .prev, .next,.text {font-size: 11px}
+		.prev, .next,.text {font-size: 11px}
 	}
 
 </style>
@@ -152,15 +155,19 @@
 	<div class="slideshow-container">
 
 		<div class="mySlides fade">
-			<img src="https://lh3.googleusercontent.com/QmylT9JMy_yaoQrZnIsjoUn8-6vtxFBUvjRDaLkRlgEpkYW-4jgIIlqIXg2RzzGyoS9pOazeSyBae92htetFUlTtXJMiHAkshXs_ukOHAm-3WB6cwoChNcSMZR6OMubXzjgxNrbUIQHiyx5CVpsRt9_JkvZy1XFbaHuKwJ1dZRxaEwhxYgDEzXnlH88S9o9NmArX7B98lm75fDCqcaYxhVWW_lxLLfaEWQlR51HeuFkcXJE3bsknMj0n_Ei-Dewqw2ev-RuRFVWKsI6KPQZ0KKyPEU5WAfwoetg-3mqsnIwONEFfSyqeFeLgzL4csWVlR1WgV-9LKLp4M8qXlPmmOamCcZwq2WPTGOxMxoiiAfUoWvL6VOXgAvPx0QqZZLX1bc8d34-f337KRd8BwangAdoPeDUna4sdLyRhbePLAgweor_FX6C2eDebuN8drbNNEvc_a5nosaxOF8tQoErSqSKAOYTpfdLZxuQIRXMKOMWRwD8CrwT9s49eJqVx8I0yha18WD_neBQOMW3bxh30PNp4Sr_V2s9RBbMdbs-LbQpwwDyeXPRF542maLTbuKeNvUp71eJ_nbSKWIH5UesI_LhJC-jStH_tFRUdY96DNHk6L8ZwT1ijbzs_0ou7sbSGt1iQoJFyi3-eWaZhKUDYNrZHb8WG65RZcm4=w1265-h949-no" >
+			<img src="https://lh3.googleusercontent.com/H9mbyGN8hRoIAjaS2mhNajT5oKWZIglPzs1ItHJo9ONYANKYkzEJaHrrui3BDdnsYnBjKVElca9aqOfL7l4uC6Zat9JBFIpxZvSgvPM5ASUGsJWUEnomJKIX4eCA1x6NUE1CYgic5m2G0vJbQ0cj9GR7knQsUeqZZMYOM-98p0fixYJgkdAGQKF76ItqNYc4pjvrvJ4mGzkhXDog9Y19-NG7GUXSi9t7BfOjpwojz2f8D49OclPeJFLMIE5hSdyG-6ze6di1Hb_KZZ6hjPUJWyHv-03jDZnm3B708FpqMnMm1sUOUe6yUIHljOnG7ug-QmASjKgFp_QXwJG56tBGJCLk1pUyEEhtNlhgPBZQll7FW3VNkmZ38_jYknl33QjJhwWWGafeg7G45HHa9Q4ws1wIKltFXHs_DHchk7WgV8EylPlWdq1d5S6pc5-LFHItKeLmsFddFTSwNQTTjMzfqGezB4k2lVbCsOlfMeLZxQ4jygWuxBZKMnrTpA2nVfrb04LEm_EPj95TXhHZXXvFiKXHdlLRnTGycS8vWAZvwrHmYfBQqD_A1abv4pd-ZY0PSBqfYA1upn58huHoTkfluJI9g7IPy4roYG7B0Xm8i1ks3MKrPsy78rQzvlnOsFjOa0XlZDnOIqCSRZ89P4P0YbzScakO37VH=w1434-h949-no" >
 		</div>
 
 		<div class="mySlides fade">
-			<img src="https://lh3.googleusercontent.com/nL2v8OTaVAQeJbbPZjdt66EKlUGZZEyHNAKFEDdUXQkJoHT3MdoRWOJGVg-8CoyXipNrct6NwoPM6bhtvGZ9z-8rthBIn_-D15d3AkIZrTQq6ABEs3aV0exnQmX0mxCyftQ5UC-4CbWMFbKNpAnLeYlX8ThRqbfmhNP3Ay_Oklv0BLHT4p57FFVO6jwuVniHeZxwQNW1v76--EUvScjE9roHceNeXFA4ajEf3kWWT2aOYgmbeIBEgqgbqvqMBbr4laRmnrO23yNKKVacLqwf3aBYutUoYnyIwX_Mr4mY-30R928xA8yCk2r8QCG8PSAXygGsnYKEXnB0zL3zCEckjuyoCXdiBfxy_G4LAm5LF_zDYD29lMjMlVAAMVF3ZKlcoe5opwPmSIwVDHy4vCysQJW6gEynk-iLqNIVAXpbzMM9cXyOp4_btdfrVoICiijM8GL2TOuzvZKrnoQFs127vLhWq1m3RRk45FACB6ojgvqadpsI0FS5Pf6q_k4jzKfCxXwsCWxDJxQq_cbp_7_sd6roS1LFycVLup8kj03u5-PMH9I2z-vsPl5Oicdo5-hoG-FnQUwk6MpSRy7iA8ThxBDOA5pmnm6ph7EeconMrqvo-7iHItewadiXoHmcCz7Bw37vdXN6kYQ6bEtSxbaZP0ARt4_VDxbXycI=w1433-h949-no" >
+			<img src="https://lh3.googleusercontent.com/OL5z7mccYmBlLus8mHYEWZFVBhlDrk2rKJTYJRNRo4hAnKx24vBwKHTRopgBcUjSM86-YK9oomnmXy9gS4zZ1zAv1OGnJUvi8rojBsHJRtHlQ5RH6zmCcOmBuORcrCk4sZiyHZgZQhUZqDUjgmv0Q6g4aFt34Qb5owghG6jr-pD5yl9RioFo0xdoF1_1PPRnKZejWez-zmhZxOCXAc443j9uKMIoHcjPh6vP87NTn40ijccMxPUSE0m-gotfeEBoyNtv-rfnHzTOFg0U_HJeAq7FRNUVGO7f9JGS1lxG5rEAexSFex1Brj3DPJzd6ouXp_fCvOti9J8nu2z2p2jEwsB1LegfurBQnshIH5j-FamkGIaPlIsk2LbIzRVlKoXLg37WQ3drj2z-0nSRQyBDr8FxrY0bhuxKR7mGzuuC9P_4-q4v0JzV-0Oa1qbYMAAodSHESViLkVqqxTxk7qAUju_lewIMRfNaOf6ijZebjRN_Acs3JDdeadYPE4ftu2sxuXHzffL3Lpkv3tEsX8TxSHmDKBzI6h8-NczyuyGUHmCrEFlP6Hr8NCGHLg28F15-G7pFSODuP77PUFCW5-ZXIf5lFpRihBDWOCD1-QgVg_7m6cNtSBTlqrFBMJPcIpCet6BK01qzdRrDuPDulA6lVvDWva6n6aeT=w1434-h949-no" >
 		</div>
 
 		<div class="mySlides fade">
-			<img src="https://lh3.googleusercontent.com/LpP4o4cNuMI7ma23_f7Rveu5CTKcAPId0_v1iU02pOpU-6ewnr6XCa1DwPW6dEvtJrvoYVNi6cwynEX_eGooig-eeYlJZPu7aS3jo2a0bE9t_hNCd7yjtU_kiSazN0yxtY1x6ILUtLKthLMsHM53Li2DpimAc--LATwahB2UZzQIrD8msgItJvCbfxbFlIQFi139mk-bVpZkYkHXZ1le1dRqI_E2y89QuzxP_OgcUR7dEGSFnb9GM96aLwcrYtYEnP_QRN44jH-bJc61la-MyJP4Zp4ZHhxWKVe5YhqA72wc33cZG6XpKotYEPXHJs--GbFs77T8q9AnHqig80uJ1IXyvzAZrJA3bHUZ-ivGhqAXGC6efAfy_-dfS223BCyrtMkP5f0QyscU-GGgr9yKalwx0Ezyrnw0Q8ODzKuwm9-P3hqDxsfK3mxutRskEwmpOu7V7nyjvAjan0arcYyD-p08g70sgbuHzqkiypOEVd6eXAzEDmsXmFrbc8e1DBo8TV7LQs8KgZSqs2aPej_WS8Yi9d81pFd5ABqBd8o1WowQm5srv9ZT8BM7y061nmOVGU6s4ybZ2SuKgbwSNppbZKd7rG2IMBagLWTLxQaFoUT8wiIx5PKvf3dASJmXLQw-KZVFFURx22c8yFXLzbh4UwvWL-366ib0paY=w1639-h949-no">
+			<img src="https://lh3.googleusercontent.com/joGRkA70mN5O7Y9AvrH4jeq4ZPHpGP1GZjVzIo-4s9kH8UItcU66nNMulj1CVplETQOjqYrwdrrL5GAm4F2lr3HA8oH1kLDpwdQsNkLXhebOJbIPZoZuVAtQBoFspb5HPxnXTpVkeYL0-mTYGVsOuOK4-oFLphLjhxe7SSmTepKZdkBShML6PJFBdOLFMrwcJZYadEZ9rQwjBT-BgdyfKTwV7l_c-j8O_7Na8LTFqQv-hz7k49wtM56jALsKfPDeyYc-WTXYx-cRvX5oIHSD9QOQZ-nEONdEuTWjBL05hQYn4Exo6iY3hOSIkn8rjYjem5gc3pGshz4LPQt0ugafLUKI_cmgVpQisP9G1sYFoXGDC65NQWbpBMNDm5m1DJj2dp4uQCu4RMynCedkFBDYfXuyU5DmBQVUpEUnaSufqBoMcrTzSQcS-Xu-uJqvDjPluZGAp2NWoyotBNVMr-pcNx6hZsRbnWU10XHIemSQsijjbR7JH_KOQZpdY6io09PCDEvVMPZoYttumuD8drRKt8Z5maHgbjkDGh19wfJK75giOddz6bKyZIw3m0whfb7sp610DKBRT85hZSFk_mFdfIPYdLrWkXdvZ63bU-yTb_szsKyG6sizzwrXhJiqgoEU4KNaP7WAsf-UJRHafBUdJaYnRsDI3DsY=w1434-h949-no">
+		</div>
+
+		<div class="mySlides fade">
+			<img src="https://lh3.googleusercontent.com/4yF9oJl7Bqo7N41KwoLYbDYJvXI1_IPEhypZwjotrpGWEHElbYpL1valJKErWCa25RD8EcBWPecY-TEVHpFp95PqWjvsTzBC8UA9upYubt-i12jNbO8wzAfkjjnwvaSFNn9n99i_kzeEA2M6QTZOIkh7wno9cDFlIydIS0mAba-1UH8VnNZQ5VeK7a3DApnXOfsz-wYqmL9gMYgVfX7BBFgImBuXGu0SwaYDD0G3TbOQk1ANwC06vmTWWgx8kwvIkR6UFHaEhhHyK7yZDhM-WMp84tmzzjaqBypmSwGPI7h6lRXIy9Nky-aQcZ0okCtVhehqGU30W2mtK9eN5a_CrdVw49123qDvtiw2XJjvwUdGodGv9sXPyXetCZP2iUoP8rF0fe5Xd9lSfxZ1kJWZnep5X0oKRDoqyO9ndGp0WYoitGx1PK-Or1nHM5NjWTbyFkFje8EDcTf7-FxgcAN85SktSL1cf9R-DmusVHEnhMZZ8Yai9WQZL8UmmNeTzuctZ7KtWC7N7_KnM3MGgIN_3L5J4mCl__UaC4ieTgdPttpuRZUNpltc_-hGXNDDjPagsiq18rfNs6cP2rg2uAsOtKmiMGI4j1bTWC-q9QsDnccSJW0vrT1YwDASOz4vWdJoF5EiHncrPQGc4jX94PJtJsEokEc2PlsG=w1434-h949-no">
 		</div>
 
 
@@ -174,6 +181,7 @@
 		<span class="dot" onclick="currentSlide(1)"></span> 
 		<span class="dot" onclick="currentSlide(2)"></span> 
 		<span class="dot" onclick="currentSlide(3)"></span> 
+		<span class="dot" onclick="currentSlide(4)"></span> 
 	</div>
 
 	<script>
