--- a/galleries/weddings-gallery.html
+++ b/galleries/weddings-gallery.html
@@ -127,7 +127,7 @@
 
 	/* On smaller screens, decrease text size */
 	@media only screen and (max-width: 300px) {
-	  .prev, .next,.text {font-size: 11px}
+		.prev, .next,.text {font-size: 11px}
 	}
 
 </style>
@@ -152,17 +152,8 @@
 	<div class="slideshow-container">
 
 		<div class="mySlides fade">
-			<img src="https://lh3.googleusercontent.com/QmylT9JMy_yaoQrZnIsjoUn8-6vtxFBUvjRDaLkRlgEpkYW-4jgIIlqIXg2RzzGyoS9pOazeSyBae92htetFUlTtXJMiHAkshXs_ukOHAm-3WB6cwoChNcSMZR6OMubXzjgxNrbUIQHiyx5CVpsRt9_JkvZy1XFbaHuKwJ1dZRxaEwhxYgDEzXnlH88S9o9NmArX7B98lm75fDCqcaYxhVWW_lxLLfaEWQlR51HeuFkcXJE3bsknMj0n_Ei-Dewqw2ev-RuRFVWKsI6KPQZ0KKyPEU5WAfwoetg-3mqsnIwONEFfSyqeFeLgzL4csWVlR1WgV-9LKLp4M8qXlPmmOamCcZwq2WPTGOxMxoiiAfUoWvL6VOXgAvPx0QqZZLX1bc8d34-f337KRd8BwangAdoPeDUna4sdLyRhbePLAgweor_FX6C2eDebuN8drbNNEvc_a5nosaxOF8tQoErSqSKAOYTpfdLZxuQIRXMKOMWRwD8CrwT9s49eJqVx8I0yha18WD_neBQOMW3bxh30PNp4Sr_V2s9RBbMdbs-LbQpwwDyeXPRF542maLTbuKeNvUp71eJ_nbSKWIH5UesI_LhJC-jStH_tFRUdY96DNHk6L8ZwT1ijbzs_0ou7sbSGt1iQoJFyi3-eWaZhKUDYNrZHb8WG65RZcm4=w1265-h949-no" >
+			<img src="http://i67.tinypic.com/15wfpya.jpg" >
 		</div>
-
-		<div class="mySlides fade">
-			<img src="https://lh3.googleusercontent.com/nL2v8OTaVAQeJbbPZjdt66EKlUGZZEyHNAKFEDdUXQkJoHT3MdoRWOJGVg-8CoyXipNrct6NwoPM6bhtvGZ9z-8rthBIn_-D15d3AkIZrTQq6ABEs3aV0exnQmX0mxCyftQ5UC-4CbWMFbKNpAnLeYlX8ThRqbfmhNP3Ay_Oklv0BLHT4p57FFVO6jwuVniHeZxwQNW1v76--EUvScjE9roHceNeXFA4ajEf3kWWT2aOYgmbeIBEgqgbqvqMBbr4laRmnrO23yNKKVacLqwf3aBYutUoYnyIwX_Mr4mY-30R928xA8yCk2r8QCG8PSAXygGsnYKEXnB0zL3zCEckjuyoCXdiBfxy_G4LAm5LF_zDYD29lMjMlVAAMVF3ZKlcoe5opwPmSIwVDHy4vCysQJW6gEynk-iLqNIVAXpbzMM9cXyOp4_btdfrVoICiijM8GL2TOuzvZKrnoQFs127vLhWq1m3RRk45FACB6ojgvqadpsI0FS5Pf6q_k4jzKfCxXwsCWxDJxQq_cbp_7_sd6roS1LFycVLup8kj03u5-PMH9I2z-vsPl5Oicdo5-hoG-FnQUwk6MpSRy7iA8ThxBDOA5pmnm6ph7EeconMrqvo-7iHItewadiXoHmcCz7Bw37vdXN6kYQ6bEtSxbaZP0ARt4_VDxbXycI=w1433-h949-no" >
-		</div>
-
-		<div class="mySlides fade">
-			<img src="https://lh3.googleusercontent.com/LpP4o4cNuMI7ma23_f7Rveu5CTKcAPId0_v1iU02pOpU-6ewnr6XCa1DwPW6dEvtJrvoYVNi6cwynEX_eGooig-eeYlJZPu7aS3jo2a0bE9t_hNCd7yjtU_kiSazN0yxtY1x6ILUtLKthLMsHM53Li2DpimAc--LATwahB2UZzQIrD8msgItJvCbfxbFlIQFi139mk-bVpZkYkHXZ1le1dRqI_E2y89QuzxP_OgcUR7dEGSFnb9GM96aLwcrYtYEnP_QRN44jH-bJc61la-MyJP4Zp4ZHhxWKVe5YhqA72wc33cZG6XpKotYEPXHJs--GbFs77T8q9AnHqig80uJ1IXyvzAZrJA3bHUZ-ivGhqAXGC6efAfy_-dfS223BCyrtMkP5f0QyscU-GGgr9yKalwx0Ezyrnw0Q8ODzKuwm9-P3hqDxsfK3mxutRskEwmpOu7V7nyjvAjan0arcYyD-p08g70sgbuHzqkiypOEVd6eXAzEDmsXmFrbc8e1DBo8TV7LQs8KgZSqs2aPej_WS8Yi9d81pFd5ABqBd8o1WowQm5srv9ZT8BM7y061nmOVGU6s4ybZ2SuKgbwSNppbZKd7rG2IMBagLWTLxQaFoUT8wiIx5PKvf3dASJmXLQw-KZVFFURx22c8yFXLzbh4UwvWL-366ib0paY=w1639-h949-no">
-		</div>
-
 
 		<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 		<a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -172,8 +163,6 @@
 
 	<div style="text-align:center">
 		<span class="dot" onclick="currentSlide(1)"></span> 
-		<span class="dot" onclick="currentSlide(2)"></span> 
-		<span class="dot" onclick="currentSlide(3)"></span> 
 	</div>
 
 	<script>
