--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Iqbal Photography</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="app.css" />
-    <script src="main.js"></script>
 </head>
 <body>
-    
+
+    <div class="hero-image">
+        <nav>
+            <div class="logo">Iqbal Photography</div>
+            <li>
+                About
+            </li>
+            <li>
+                Gallery
+            </li>
+            <li>
+                Contact
+            </li>
+        </nav>
+    </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
