added nav-bar and hero-text

--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
 <body>
 
     <div class="hero-image">
-        <nav>
-            <div class="logo">Iqbal Photography</div>
-            <li>
-                About
+        <h1 class="hero-text">Iqbal Photography</h1>
+        <nav id="nav" class="hidden">
+            <li class="logo">
+                Iqbal Photography'
             </li>
-            <li>
+            <li class="menu-items">
+                About
+            </li class>
+            <li class="menu-items">
                 Gallery
             </li>
-            <li>
+            <li class="menu-items">
                 Contact
+            </li>
+            <li class="instagram-link">
+                Follow us
             </li>
         </nav>
     </div>
