added drop-down icon

--- a/index.html
+++ b/index.html
@@ -12,21 +12,30 @@
     <div class="hero-image">
         <h1 class="hero-text">Iqbal Photography</h1>
         <nav id="nav" class="hidden">
-            <li class="logo">
-                Iqbal Photography'
-            </li>
-            <li class="menu-items">
-                About
-            </li class>
-            <li class="menu-items">
-                Gallery
-            </li>
-            <li class="menu-items">
-                Contact
-            </li>
-            <li class="instagram-link">
-                Follow us
-            </li>
+            <div class="test">
+            <div class="logo">
+                Iqbal Photography
+            </div>
+            <div class="container" onclick="myFunction(this)">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
+            </div>
+            <div class="menu-items">
+                <div>
+                    About
+                </div>
+                <div>
+                    Gallery
+                </div>
+                <div>
+                    Contact
+                </div>
+                <div class="instagram-link">
+                    Instagram
+                </div>
+            </div>
         </nav>
     </div>
 
