--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="logo">
                 Iqbal Photography
             </div>
-            <div class="container" onclick="myFunction(this)">
+            <div class="container" onclick="menuReveal(this)">
                 <div class="bar1"></div>
                 <div class="bar2"></div>
                 <div class="bar3"></div>
