finished basic nav for mobile

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="hero-image">
         <h1 class="hero-text">Iqbal Photography</h1>
-        <nav id="nav" class="hidden">
+        <nav id="nav" >
             <div class="test">
             <div class="logo">
                 Iqbal Photography
@@ -22,7 +22,7 @@
                 <div class="bar3"></div>
             </div>
             </div>
-            <div class="menu-items">
+            <div id="menu-items" class="hidden">
                 <div>
                     About
                 </div>
