added about section

--- a/test.html
+++ b/test.html
@@ -10,13 +10,13 @@
 <body>
 
     <div class="hero-image">
-        <h1 class="hero-text">Iqbal Photography</h1>
-        <nav id="nav" >
+        <h1 id="hero-text">Iqbal Photography</h1>
+        <nav id="nav" class="hidden">
             <div class="test">
             <div class="logo">
                 Iqbal Photography
             </div>
-            <div class="container" onclick="menuReveal(this)">
+            <div class="bar-container" onclick="menuReveal(this)">
                 <div class="bar1"></div>
                 <div class="bar2"></div>
                 <div class="bar3"></div>
@@ -38,6 +38,19 @@
             </div>
         </nav>
     </div>
+
+    <section id="about">
+        <h1>About</h1>
+        <p id="about-text"> </p>
+    </section>
+
+    <section>
+        <h1>Gallery</h1>
+    </section>
+
+    <section id="contact">
+        <h1>Contact</h1>
+    </section>
 
     <script src="main.js"></script>
 </body>
