added gallery section

--- a/test.html
+++ b/test.html
@@ -44,8 +44,8 @@
         <p id="about-text"> </p>
     </section>
 
-    <section>
-        <h1>Gallery</h1>
+    <section id="gallery">
+        <h1 id="enter-gallery">Enter Gallery</h1>
     </section>
 
     <section id="contact">
