--- a/test.html
+++ b/test.html
@@ -50,7 +50,22 @@
 
     <section id="contact">
         <h1>Contact</h1>
+        <p>Interested? Lets Talk!</p>
+        <form action="mailto:iqbalphotography@gmail.com" method="post" enctype="text/plain">
+            Name:<br>
+            <input type="text" name="name"><br>
+            E-mail:<br>
+            <input type="email" name="mail"><br>
+            Comment:<br>
+            <textarea name="message" rows="10" cols="30"> </textarea><br><br>
+            <input type="submit" value="Send">
+            <input type="reset" value="Reset">
+            </form>
     </section>
+
+    <footer>
+    
+    </footer>
 
     <script src="main.js"></script>
 </body>
