--- a/test.html
+++ b/test.html
@@ -58,13 +58,19 @@
             <input type="email" name="mail"><br>
             Comment:<br>
             <textarea name="message" rows="10" cols="30"> </textarea><br><br>
-            <input type="submit" value="Send">
-            <input type="reset" value="Reset">
+            <input class="submit" type="submit" value="Send">
+            <input class="reset" type="reset" value="Reset">
             </form>
     </section>
 
     <footer>
-    
+        <div id="copyright">Copyright &copy; Iqbal Photography 2018</div> 
+        <div class="footer-links">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Gallery</a>
+            <a href="">Contact</a>
+       </div>
     </footer>
 
     <script src="main.js"></script>
