adjusted gallery link

--- a/test.html
+++ b/test.html
@@ -40,12 +40,12 @@
     </div>
 
     <section id="about">
-        <h1>About</h1>
+        <<h1>About</h1>
         <p id="about-text"> </p>
     </section>
 
     <section id="gallery">
-        <h1 id="enter-gallery">Enter Gallery</h1>
+        <h1 id="enter-gallery"><a href="gallery.html">Enter Gallery</a></h1>
     </section>
 
     <section id="contact">
