added animation to drop down menu

--- a/gallery.html
+++ b/gallery.html
@@ -14,12 +14,12 @@
     
     <script>
 
-    var ArrayOfImages = ['https://upload.wikimedia.org/wikipedia/commons/f/f9/Wiktionary_small.svg','https://upload.wikimedia.org/wikipedia/commons/f/f9/Wiktionary_small.svg','https://upload.wikimedia.org/wikipedia/commons/f/f9/Wiktionary_small.svg'];//your assumed array
-    ArrayOfImages.forEach(function(image){
-    var img = document.createElement('img');
-    img.src = image;
-    document.getElementById('bg-gallery').appendChild(img);
-    });
+    // var ArrayOfImages = ['https://upload.wikimedia.org/wikipedia/commons/f/f9/Wiktionary_small.svg','https://upload.wikimedia.org/wikipedia/commons/f/f9/Wiktionary_small.svg','https://upload.wikimedia.org/wikipedia/commons/f/f9/Wiktionary_small.svg'];//your assumed array
+    // ArrayOfImages.forEach(function(image){
+    // var img = document.createElement('img');
+    // img.src = image;
+    // document.getElementById('bg-gallery').appendChild(img);
+    // });
 
     </script>
 </body>
