--- a/test.html
+++ b/test.html
@@ -25,16 +25,16 @@
             </div>
             <div id="menu-items" class="hidden">
                 <div>
-                    About
+                    <a href="#about">About</a>
                 </div>
                 <div>
-                    Gallery
+                   <a href="#gallery">Gallery</a>
                 </div>
                 <div>
-                    Contact
+                    <a href="#contact">Contact</a>
                 </div>
                 <div class="instagram-link">
-                    Follow us! <i class="fa fa-instagram"></i>
+                    <a href="">Follow us! <i class="fa fa-instagram"></i></a>
                 </div>
             </div>
         </nav>
