added some css transitions

--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
 
     <div class="hero-image">
         <h1 id="hero-text">Iqbal Photography</h1>
-        <nav id="nav" class="hidden">
+        <nav id="nav" class="invisible">
             <div class="test">
             <div class="logo">
                 Iqbal Photography
@@ -25,16 +25,16 @@
             </div>
             <div id="menu-items" class="hidden">
                 <div>
-                    <a href="#about">About</a>
+                    <a class="links" href="#about">About</a>
                 </div>
                 <div>
-                   <a href="#gallery">Gallery</a>
+                   <a class="links" href="#gallery">Gallery</a>
                 </div>
                 <div>
-                    <a href="#contact">Contact</a>
+                    <a class="links" href="#contact">Contact</a>
                 </div>
                 <div class="instagram-link">
-                    <a href="">Follow us! <i class="fa fa-instagram"></i></a>
+                    <a class="links" href="">Follow us! <i class="fa fa-instagram"></i></a>
                 </div>
             </div>
         </nav>
