some changes to menu bar

--- a/test.html
+++ b/test.html
@@ -25,16 +25,16 @@
             </div>
             <div id="menu-items" class="hidden">
                 <div>
-                    <a class="links" href="#about">About</a>
+                    <a onclick="hideMenu()" href="#about">About</a>
                 </div>
                 <div>
-                   <a class="links" href="#gallery">Gallery</a>
+                   <a onclick="hideMenu()" href="#gallery">Gallery</a>
                 </div>
                 <div>
-                    <a class="links" href="#contact">Contact</a>
+                    <a onclick="hideMenu()" href="#contact">Contact</a>
                 </div>
                 <div class="instagram-link">
-                    <a class="links" href="">Follow us! <i class="fa fa-instagram"></i></a>
+                    <a onclick="hideMenu()" href="">Follow us! <i class="fa fa-instagram"></i></a>
                 </div>
             </div>
         </nav>
