added x-out button and adjusted color scheme

--- a/test.html
+++ b/test.html
@@ -13,17 +13,20 @@
     <div class="hero-image">
         <h1 id="hero-text">Iqbal Photography</h1>
         <nav id="nav" class="invisible">
-            <div class="test">
-            <div class="logo">
-                Iqbal Photography
-            </div>
-            <div class="bar-container" onclick="menuReveal(this)">
-                <div class="bar1"></div>
-                <div class="bar2"></div>
-                <div class="bar3"></div>
-            </div>
+            <div class="top-bar">
+                <div class="logo">
+                    Iqbal Photography
+                </div>
+                <div class="bar-container" onclick="menuReveal(this)">
+                    <div class="bar1"></div>
+                    <div class="bar2"></div>
+                    <div class="bar3"></div>
+                </div>
             </div>
             <div id="menu-items" class="hidden">
+                <div id="close-menu"  onclick="hideMenu()">
+                    X
+                </div>
                 <div>
                     <a onclick="hideMenu()" href="#about">About</a>
                 </div>
