--- a/test.html
+++ b/test.html
@@ -37,7 +37,7 @@
                     <a onclick="hideMenu()" href="#contact">Contact</a>
                 </div>
                 <div class="instagram-link">
-                    <a onclick="hideMenu()" href="">Follow us! <i class="fa fa-instagram"></i></a>
+                    <a onclick="hideMenu()" href="https://www.instagram.com/iqbalphotography/">Follow us! <i class="fa fa-instagram"></i></a>
                 </div>
             </div>
         </nav>
@@ -70,10 +70,10 @@
     <footer>
         <div id="copyright">Copyright &copy; Iqbal Photography 2018</div> 
         <div class="footer-links">
-            <a href="">Home</a>
-            <a href="">About</a>
-            <a href="">Gallery</a>
-            <a href="">Contact</a>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#gallery">Gallery</a>
+            <a href="#contact">Contact</a>
        </div>
     </footer>
 
