--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Gallery</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="gallery.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/gallery.css" />
     
 </head>
 <body>
