--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/nav-footer.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/gallery.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative|Corben" rel="stylesheet">
 </head>
 <body>
  
