--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/nav-footer.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/app.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative|Corben" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative|Corben|Lora" rel="stylesheet">
 </head>
 <body>
 
