--- a/gallery.html
+++ b/gallery.html
@@ -59,6 +59,7 @@
            </div>
         </footer>
         
-    <script src="gallery.js"></script>
+    <script src="javascript/nav.js"></script>
+    <script src="javascript/gallery.js"></script>
 </body>
 </html>
