--- a/test.html
+++ b/test.html
@@ -14,7 +14,7 @@
 
     <div class="hero-image">
         <h1 id="hero-text">Iqbal Photography</h1>
-        <nav id="nav" class="invisible">
+        <nav id="nav">
             <div class="top-bar">
                 <div class="logo">
                     Iqbal Photography
@@ -25,7 +25,7 @@
                     <div class="bar3"></div>
                 </div>
             </div>
-            <div id="menu-items" class="hidden">
+            <div id="menu-items">
                 <div id="close-menu"  onclick="hideMenu()">
                     X
                 </div>
@@ -79,6 +79,7 @@
        </div>
     </footer>
 
-    <script src="main.js"></script>
+    <script src="javascript/nav.js"></script>
+    <script src="javascript/main.js"></script>
 </body>
 </html>
