--- a/test.html
+++ b/test.html
@@ -14,7 +14,7 @@
 
     <div class="hero-image">
         <h1 id="hero-text">Iqbal Photography</h1>
-        <nav id="nav">
+        <nav id="nav" class="invisible">
             <div class="top-bar">
                 <div class="logo">
                     Iqbal Photography
