adjusted the navbar for desktop

--- a/test.html
+++ b/test.html
@@ -15,31 +15,33 @@
     <div class="hero-image">
         <h1 id="hero-text">Iqbal Photography</h1>
         <nav id="nav" class="invisible">
-            <div class="top-bar">
-                <div class="logo">
-                    Iqbal Photography
+            <div class="top-bar-desktop">
+                <div class="top-bar">
+                    <div class="logo">
+                        Iqbal Photography
+                    </div>
+                    <div class="bar-container" onclick="menuReveal(this)">
+                        <div class="bar1"></div>
+                        <div class="bar2"></div>
+                        <div class="bar3"></div>
+                    </div>
                 </div>
-                <div class="bar-container" onclick="menuReveal(this)">
-                    <div class="bar1"></div>
-                    <div class="bar2"></div>
-                    <div class="bar3"></div>
-                </div>
-            </div>
-            <div id="menu-items">
-                <div id="close-menu"  onclick="hideMenu()">
-                    X
-                </div>
-                <div>
-                    <a onclick="hideMenu()" href="#about">About</a>
-                </div>
-                <div>
-                   <a onclick="hideMenu()" href="#gallery">Gallery</a>
-                </div>
-                <div>
-                    <a onclick="hideMenu()" href="#contact">Contact</a>
-                </div>
-                <div class="instagram-link">
-                    <a onclick="hideMenu()" href="https://www.instagram.com/iqbalphotography/">Follow us! <i class="fa fa-instagram"></i></a>
+                <div id="menu-items">
+                    <div id="close-menu"  onclick="hideMenu()">
+                        X
+                    </div>
+                    <div>
+                        <a onclick="hideMenu()" href="#about">About</a>
+                    </div>
+                    <div>
+                        <a onclick="hideMenu()" href="#gallery">Gallery</a>
+                    </div>
+                    <div>
+                        <a onclick="hideMenu()" href="#contact">Contact</a>
+                    </div>
+                    <div class="instagram-link">
+                        <a onclick="hideMenu()" href="https://www.instagram.com/iqbalphotography/">Follow us! <i class="fa fa-instagram"></i></a>
+                    </div>
                 </div>
             </div>
         </nav>
